Update in skill Section

--- a/src/components/Education/Education.module.css
+++ b/src/components/Education/Education.module.css
@@ -13,6 +13,7 @@
     font-weight: 700;
     letter-spacing: 1.75px;
     text-transform: uppercase;
+    margin-bottom: 50px;
 }
 
 .content{
@@ -20,6 +21,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 14px;
+    
 }
 
 .skills{
