--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -57,16 +57,19 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    justify-content: center;
     gap: 6px;
     list-style: none;
+    padding: 10px;
 }
 
 .skill{
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 500;
+    white-space: nowrap;
     border-radius: 100px;
     background: var(--color-dark);
-    padding: 2px 15px;
+    padding: 4px 10px;
 }
 
 .links{
