--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -5,7 +5,6 @@
   color: var(--color-text);
   margin-left: 10%;
   margin-right: 10%;
-
 }
 
 .title {
@@ -22,7 +21,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  gap: 25px;
   width: 100%;
 }
 
@@ -32,7 +31,7 @@
   border-radius: 10px;
   background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
   box-shadow: 0 16px 14px 0 #04152d;
-  padding: 18px 24px;
+  padding: 18px 20px;
   max-width: 345px;
 }
 
@@ -45,48 +44,50 @@
   font-weight: 700;
 }
 
-.description{
-    margin-top: 6px;
-    font-size: 25px;
-    font-weight: 400;
+.description {
+  margin-top: 6px;
+  font-size: 25px;
+  font-weight: 400;
+  white-space: wrap;
 }
 
-.skills{
-    width: 100%;
-    margin-top: 14px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    gap: 6px;
-    list-style: none;
-    padding: 10px;
+.skills {
+  width: 100%;
+  margin-top: 14px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  gap: 5px;
+  list-style: none;
+  padding-top: 10px;  
+  text-align: center;
 }
 
-.skill{
-    font-size: 20px;
-    font-weight: 500;
-    white-space: nowrap;
-    border-radius: 100px;
-    background: var(--color-dark);
-    padding: 4px 10px;
-}
-
-.links{
-    width: 100%;
-    margin-top: 26px;
-    display: flex;
-    justify-content: center;
+.skill {
+  font-size: 18px;
+  font-weight: 500;
+  white-space: nowrap;
+  border-radius: 100px;
+  background: var(--color-dark);
+  padding: 4px 10px;
 
 }
 
-.link{
-     text-decoration: none;
-     color: var(--color-text);
-     font-family: var(--font-roboto);
-     font-size: 25px;
-     font-weight: 400;
-     border-radius: 100px;
-     background-color: var(--color-primary);
-     padding: 1px 22px;
+.links {
+  width: 100%;
+  margin-top: 26px;
+  display: flex;
+  justify-content: center;
+}
+
+.link {
+  text-decoration: none;
+  color: var(--color-text);
+  font-family: var(--font-roboto);
+  font-size: 25px;
+  font-weight: 400;
+  border-radius: 100px;
+  background-color: var(--color-primary);
+  padding: 1px 22px;
 }
